Fixes horizontal scrollbar in Windows

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,10 @@
+html {
+    /**
+     * This keeps Windows version from always showing a horizontal scrollbar.
+     */
+    overflow: hidden;
+}
+
 body {
     background-color: #fff;
 }
